# ejp-s

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.ejs/repos/localhost/workbook4/title0/: info.json
include/: common.h  http.h  info.h
includes/: common.h  http.h  test.h
lib/: CMakeLists.txt  common.c  http.c  info.c  test.c
myAnswer/: test  test.c
myAnswers/: bubble  bubble.c
myRepos/: 1_test.json  1_tutor01's repo1.json  2_tutor01's repo2.json
scripts/: install.sh  setup.sh
src/: CMakeLists.txt  main.c  problem.c  problem.service.c  repo.c  repo.service.c  testcase.c
